white space issue

--- a/client/src/pages/Find/find.css
+++ b/client/src/pages/Find/find.css
@@ -1,5 +1,6 @@
 .white-background{
   background-color: white;
+  height: 100vh;
 }
 
 
